feat: display payment card type based on card number

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
                 <div class="visa-card__logo">
                     <div class="visa-card__silver-mark"></div>
                     <figure class="visa-text-logo">
-                        <img src="./images/Visa_Logo.png" alt="">
+                        <img src="" alt="">
+                        <!-- <img src="./images/Visa_Logo.png" alt="" width="60px"> -->
+                        <!-- <img src="./images/Mastercard_logo.jpg" alt="" width="90px" > -->
+                        <!-- <img src="./images/american-express-logo.png" alt="" width="100px"> -->
                     </figure>
                 </div>
 
