feat: throw error if numbers are not filled in number fields

--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
                     <div class="visa-card__silver-mark"></div>
                     <figure class="visa-text-logo">
                         <img src="" alt="">
-                        <!-- <img src="./images/Visa_Logo.png" alt="" width="60px"> -->
-                        <!-- <img src="./images/Mastercard_logo.jpg" alt="" width="90px" > -->
-                        <!-- <img src="./images/american-express-logo.png" alt="" width="100px"> -->
                     </figure>
                 </div>
 
@@ -93,6 +90,7 @@
                             name="form__card-number"
                         >
                     </div>
+                    <p class="card-number__error-message"></p>
                 </div>
     
                 <div class="form__card-holder">
@@ -159,6 +157,7 @@
                             required
                             name="cvv-number"
                         >
+                        <p class="cvv-number__error-message"></p>
                     </div>
                 </div>
                 <button>Submit</button>
