feat: ensure user enters at least first and last name in card holder

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                         required 
                         name="card-holder"
                     >
+                    <p class="card-holder__error-message"></p>
                 </div>
     
                 <div class="expiry-and-cvv">
