style: add colors to the page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             <div class="visa-card__content">
 
                 <div class="visa-card__logo">
-                    <div class="visa-card__silver-mark"></div>
+                    <div class="visa-card__emv-chip">
+                        <div class="design__horizontal-line"></div>
+                        <div class="design__vertical-line"></div>
+                    </div>
                     <figure class="visa-text-logo">
                         <img src="" alt="">
                     </figure>
