style: make webpage responsive across all screens

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="visa-card__expiration">
                         <h4 class="header">Expires</h4>
                         <p></p>
-                    </di
+                    </div>
                 </div>
             </div>
         </section>
